--- a/configure.ac
+++ b/configure.ac
@@ -1,6 +1,6 @@
-AC_INIT([fblog], [0.6.1], [deber@users.sf.net])
+AC_INIT([fblog], [9999(r439)], [deber@users.sf.net])
 FC=gfortran
-FCFLAGS="-v -static-libgfortran"
+FCFLAGS="-g -O3 -std=f2008 -pedantic -Wall -Wextra -Werror -fcheck=all -static-libgfortran"
 AM_INIT_AUTOMAKE([-Wall -Werror foreign])
 AC_PROG_FC
 AC_CONFIG_HEADERS([config.h])
